NIFI-12516 Corrected String.isEmpty() check for Java 8
Signed-off-by: David Handermann <exceptionfactory@apache.org>